--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "new-project": {
+    "knock-it-off": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/new-project",
+            "outputPath": "dist/knock-it-off",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -66,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "new-project:build"
+            "browserTarget": "knock-it-off:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "new-project:build:production"
+              "browserTarget": "knock-it-off:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "new-project:build"
+            "browserTarget": "knock-it-off:build"
           }
         },
         "test": {
@@ -114,15 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "new-project:serve"
+            "devServerTarget": "knock-it-off:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "new-project:serve:production"
+              "devServerTarget": "knock-it-off:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "new-project"
+  "defaultProject": "knock-it-off"
 }
